// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Functions can use CONTAINS array function 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771742,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "lhs": "hasLondon",
    "operation": "evalRule",
    "result": Object {
      "cities": Array [
        "Denver",
        "London",
        "LA",
      ],
      "hasLondon": true,
      "onlyUSA": true,
    },
    "rule": "hasLondon = CONTAINS(\\"London\\", cities)",
    "stepCount": 1,
    "stepRow": 0,
    "value": true,
  },
  Object {
    "operation": "ruleString",
    "result": Object {
      "cities": Array [
        "Denver",
        "London",
        "LA",
      ],
      "hasLondon": true,
      "onlyUSA": true,
    },
    "rule": "hasLondon = CONTAINS(\\"London\\", cities)",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 0,
    "stepCount": 1,
    "stepRow": 1,
  },
]
`;

exports[`Custom Functions can use functional array helpers 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771741,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "lhs": "availableCities",
    "operation": "evalRule",
    "result": Object {
      "availableCities": Array [
        "Denver",
        "LA",
      ],
      "cities": Array [
        "Denver",
        "London",
        "LA",
      ],
      "onlyUSA": true,
    },
    "rule": "availableCities = FILTER_VALUES([\\"London\\", \\"Milan\\"], cities)",
    "stepCount": 1,
    "stepRow": 0,
    "value": Array [
      "Denver",
      "LA",
    ],
  },
  Object {
    "operation": "ruleString",
    "result": Object {
      "availableCities": Array [
        "Denver",
        "LA",
      ],
      "cities": Array [
        "Denver",
        "London",
        "LA",
      ],
      "onlyUSA": true,
    },
    "rule": "availableCities = FILTER_VALUES([\\"London\\", \\"Milan\\"], cities)",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": Array [
      "Denver",
      "LA",
    ],
    "rule": "availableCities",
    "stepCount": 2,
    "stepRow": 1,
  },
  Object {
    "operation": "return",
    "result": Array [
      "Denver",
      "LA",
    ],
    "rule": "availableCities",
    "stepCount": 2,
    "stepRow": 1,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 1,
    "stepCount": 2,
    "stepRow": 1,
  },
]
`;

exports[`Custom Functions can use functions as expressions 1`] = `"2020-01-20T00:10:00.000Z"`;

exports[`Logical and/or can process 'and' rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771736,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price <= 50",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "operation": "if.and",
    "result": true,
    "rule": Array [
      "price >= 25",
      "price <= 50",
    ],
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "discount": 5,
      "price": 35,
    },
    "rule": "discount = 5",
    "stepCount": 3,
    "stepRow": 0,
    "value": 5,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 5",
    "stepCount": 3,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "operation": "if",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "operation": "expression",
    "result": 5,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "operation": "return",
    "result": 5,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 0,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Logical and/or can process 'or' rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771737,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "if",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "discount": 20,
      "price": 35,
      "user": Object {
        "isAdmin": true,
      },
    },
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "user.isAdmin == true",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "operation": "if.or",
    "result": true,
    "rule": Array [
      "price >= 100",
      "user.isAdmin == true",
    ],
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "discount": 20,
      "price": 35,
      "user": Object {
        "isAdmin": true,
      },
    },
    "rule": "discount = 20",
    "stepCount": 5,
    "stepRow": 1,
    "value": 20,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 20",
    "stepCount": 5,
    "stepRow": 1,
  },
  Object {
    "operation": "expression",
    "result": 20,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  Object {
    "operation": "return",
    "result": 20,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 0,
    "stepCount": 6,
    "stepRow": 2,
  },
]
`;

exports[`Logical and/or can process nested logical rule arrays 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771738,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "if",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "discount": 5,
      "price": 90,
      "user": Object {
        "discountApplied": true,
        "isAdmin": true,
      },
    },
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  Object {
    "lhs": "user.discountApplied",
    "operation": "evalRule",
    "result": Object {
      "discount": 5,
      "price": 90,
      "user": Object {
        "discountApplied": true,
        "isAdmin": true,
      },
    },
    "rule": "user.discountApplied = true",
    "stepCount": 3,
    "stepRow": 0,
    "value": true,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": Array [
      "discount = 5",
      "user.discountApplied = true",
    ],
    "stepCount": 3,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 90",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "operation": "expression",
    "result": false,
    "rule": "user.discountApplied != true",
    "stepCount": 5,
    "stepRow": 1,
  },
  Object {
    "operation": "if.and",
    "result": false,
    "rule": Array [
      "price >= 90",
      "user.discountApplied != true",
    ],
    "stepCount": 5,
    "stepRow": 1,
  },
  Object {
    "operation": "expression",
    "result": 5,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  Object {
    "operation": "return",
    "result": 5,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 0,
    "stepCount": 6,
    "stepRow": 2,
  },
]
`;

exports[`Logical if/then/else can process 'then' rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771732,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "if",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "discount": 20,
      "price": 100,
    },
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "operation": "if",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "discount": 20,
      "price": 100,
    },
    "rule": "discount = 20",
    "stepCount": 4,
    "stepRow": 1,
    "value": 20,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 20",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "operation": "expression",
    "result": 20,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "operation": "return",
    "result": 20,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 1,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Logical if/then/else can process omitted 'else' rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771734,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "if",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": undefined,
    "rule": "discount",
    "stepCount": 2,
    "stepRow": 1,
  },
  Object {
    "operation": "return",
    "result": undefined,
    "rule": "discount",
    "stepCount": 2,
    "stepRow": 1,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 0,
    "stepCount": 2,
    "stepRow": 1,
  },
]
`;

exports[`Logical if/then/else can process series of if/then rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771735,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "user.plan == \\"premium\\"",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "if",
    "result": true,
    "rule": "user.plan == \\"premium\\"",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "config": Object {
        "maxDiscount": 10,
      },
      "discount": 15,
      "shoppingCart": Object {
        "discount": 1,
        "total": 100,
      },
      "user": Object {
        "employee": true,
        "plan": "premium",
      },
    },
    "rule": "discount = 15",
    "stepCount": 2,
    "stepRow": 0,
    "value": 15,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 15",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "user.employee == true",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "operation": "if",
    "result": true,
    "rule": "user.employee == true",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "config": Object {
        "maxDiscount": 10,
      },
      "discount": 15,
      "shoppingCart": Object {
        "discount": 1,
        "total": 100,
      },
      "user": Object {
        "employee": true,
        "plan": "premium",
      },
    },
    "rule": "discount = 15",
    "stepCount": 4,
    "stepRow": 1,
    "value": 15,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 15",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "operation": "expression",
    "result": 15,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "operation": "return",
    "result": 15,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 0,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Nested Rule Structures can process complex rule expressions 1`] = `
Array [
  Object {
    "operation": "begin",
    "result": undefined,
    "rule": undefined,
    "startTime": 1653371771745,
    "stepCount": 0,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "operation": "if",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "discount": 80,
      "price": 100,
    },
    "rule": "discount = 5 * 2",
    "stepCount": 2,
    "stepRow": 0,
    "value": 10,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 5 * 2",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "operation": "if",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "result": Object {
      "discount": 80,
      "price": 100,
    },
    "rule": "discount = 20 * 4",
    "stepCount": 4,
    "stepRow": 1,
    "value": 80,
  },
  Object {
    "operation": "if.then",
    "result": true,
    "rule": "discount = 20 * 4",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "operation": "expression",
    "result": 80,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "operation": "return",
    "result": 80,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "operation": "complete",
    "result": undefined,
    "rule": undefined,
    "runTime": 0,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;
